# playground

./: LICENSE  README.md
horizon/: analyze.py
horizon/llama2.onnx/: README.md  export_onnx.py  requirements.txt
horizon/llama2.onnx/model/: group_conv.py  model.py
horizon/llama2.trace/: README.md  model.py  model_per_block.py  requirements.txt  trace.py
horizon/llama2.trace/model/: group_conv.py  model.py
horizon/llm.int4/ggml/: CMakeLists.txt  README.md  convert-h5-to-ggml.py  convet-h5-to-ggml.py  main.cpp  quantize.cpp  train.py
horizon/llm.int4/ggml/assets/: mnist_model.state_dict
horizon/llm.int4/ggml/src/: CMakeLists.txt
horizon/llm.int4/refc/: CMakeLists.txt  README.md  assets  convert_state_dict.py  main.cpp
horizon/x3/: analyze.py
llm/WeNetxLLM/: train.sh  train_qwen.py
